src/styles/Hero.css
.hero-container {
  width: 100vw;
  margin: 0;
}
.hero{

}
Link{
  text-decoration: none;
}
.hero-nav {
  position: absolute;
  top: 10px;
  right: 60px;
  z-index: 2;
}
.hero-nav .nav-links {
  padding: 1vw; 
}


.nav-toggle {
  display: none;
  flex-direction: column;
  cursor: pointer;
  gap: 5px;
  position: absolute;
  top: 10px;
  left: 3vw;
 
}

.toggle-bar {
  width: 30px;
  height: 4px;
  background-color: white;
  border-radius: 2px;
}

.nav-links {
  list-style: none;
  display: flex;
  gap: 20px;
  margin: 0;
  padding: 2vw;
}

.nav-links li {
  color: white; 
  font-size: 1.3vw;
  font-weight: 600;
  font-family: 'CabinetGrotesk', sans-serif;
  cursor: pointer;
  transition: color 0.2s, transform 0.2s, background-color 0.2s;
  padding: 0.5em 1em; 
  border-radius: 5px; 
}

.nav-links li:hover {
  color: #f0a500; 
  background-color: rgba(255, 255, 255, 0.1); 
  transform: translateY(-2px); 
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.nav-links li:active {
  transform: translateY(2px);
  background-color: rgba(255, 255, 255, 0.2); 
}
.hero-background {
  width: 100vw;
  height: 800px;
  background-color: black;
  align-items: center;
  position: relative;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
}

.hero-registrations {
  width: 32vw;
  height: 100px;
  background-color: #FCD600;
  position: absolute;
  z-index: 1;
  margin-left: -47vw;
  top: -15px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  
  border-radius: 20px;
 

}

.hero-registrations h1 {
  font-family: 'CoveredByYourGrace', cursive;
  font-size: 25px;
}

.hero-registrations button {
  width: 150px;
  height: 50px;
  border-radius: 10px;
  background-color: #ed444b;
  color: white;
  border: none;
  margin-top: 10px;
  box-shadow: 0 4px 6px rgba(41, 39, 39, 0.2), 0 2px 4px rgba(255, 255, 255, 0.15);
  transition: box-shadow 0.3s, transform 0.3s;
}
.hero-registrations button:hover,
.hero-registrations button:focus {
  box-shadow: 0 0.5em 0.5em -0.4em rgba(255, 255, 255, 0.2);
  transform: translateY(-0.25em);
}

.hero-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  z-index: 1;
  color: white;
  flex-wrap: wrap;
  top: 150px;
  font-size: 30px;
  text-align: center;
  font-family: 'CabinetGrotesk', sans-serif;
}
.hero-content p{
  margin-top: 0;
 font-size:'15px';
}
.hero-content{
  font-weight: bold;
}

.hero-logo {
  width: 7vw;
  margin: 0;
  margin-bottom: 30px;
}

.hero-statistics {
  width: 100vw;
  display: flex;
  flex-direction: column; 
  align-items: center; 
  margin-top: 350px;
  gap: 0;
}

.hero-image-container {
  position: relative;
  margin-bottom: 0;
 
}

.hero-count-image {
  width: 100%; 
}

.hero-stats-text {
  position: absolute; 
  top: 40%; 
  left: 50%;
  transform: translate(-50%, -50%); 
  font-family: 'CoveredByYourGrace', cursive;
  font-size: 30px;
  color: white; 
  text-align: center;
}

.hero-images {
  display: flex;
  gap: 5vw; 
  margin-top: 2vw; 

}

.hero-badge {
  width: 300px;
  height: 300px;
  gap: 0; 
  margin-top: -150px; 
  
}

.hero-main-image {
  width: 100vw;
  gap: 0; 
  margin-top: -260px; 

}


@media (max-width: 480px) {
  .hero-background { 
    height: 510px;
    width: 100vw;
    margin: 0;
  }

  .hero-registrations {
    width: 65vw;
    height: 50px;
    margin-top: 30px;
    border-radius: 5px;
    padding-left: 2vw;
    padding-right: 2vw;
  }

  .hero-registrations h1 {
    font-size: 12px;
  }

  .hero-registrations button {
    width: 30vw;
    height: 25px;
    font-size: 12px;
    margin-top: -5px;
  
  }
  .nav-toggle {
    
  
  }
 .hero-nav{
 
 }

 .nav-links {
  display: flex;
      gap: 20px;
      list-style: none;
    
}

  .nav-links.open {
    display: flex;
    margin-left:3vw ;
  }

  .nav-links li {
    font-size: 16px;
    padding-top: 2vw;

  }

  .hero-content {
   
    top: 120px;
    font-size: 15px;
  }
  
  .hero-content p {
    font-size: 16px;
    text-align: center;
   margin-left: 40px;
   margin: 0;
  
  }
  .hero-content h1{
    margin-left: 50px;
    margin-top: 40px;
    font-size: 35px;
  }


  .hero-logo {
    width: 60px;
    height: 30px;
  
    margin-top: 10px;
  }

  .hero-statistics {
    left: 20px;
    top: 200px;
  }

  .hero-count-image {
    margin-left: 30px;
    width: 250px;
    height: 100px;
    margin-top: -70px;
  }

  .hero-stats-text {
   
    font-size: 17px;
    margin-top: 65px;
    margin-left: 70px;
  }

  .hero-stats-text p{
    width: 50vw;
    margin-top: -130px;
    margin-left: -90px;
  }

  .hero-badge {
    display: none;
    width: 100px;
    height: 100px;
 
    margin-top: -250px;
  }

  .hero-main-image {
    width: 100vw;
   display: none;
    margin-top:-6vw;
  }
  .hero-images{
    margin-top: 170px;
  }
}

